# Dicto

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: build-apple-polish.sh  fetch-model.sh  models.sha256  regen-icons.sh  release.sh  verify-model.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/binaries/: dicto-apple-polish-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/resources/models/: .gitkeep
src-tauri/src/: chime.rs  commands.rs  config.rs  lib.rs  main.rs  menubar.rs  notify.rs  overlay.rs  pipeline.rs  state.rs
src-tauri/src/audio/: mod.rs  recorder.rs  resample.rs
src-tauri/src/dictionary/: mod.rs  prompt.rs
src-tauri/src/history/: mod.rs
src-tauri/src/hotkey/: listener.rs  mac_tap.rs  mod.rs
src-tauri/src/inject/: mod.rs  paste.rs  target.rs
src-tauri/src/keychain/: mod.rs
src-tauri/src/model/: manifest.rs  mod.rs
src-tauri/src/permissions/: mod.rs
src-tauri/src/polish/: apple_intelligence.rs  claude.rs  groq_llama.rs  local_lite.rs  mod.rs  noop.rs  prompt.rs  resolver.rs
src-tauri/src/polish/bundled_llm/: manifest.rs  mod.rs
src-tauri/src/polish/local_lite/: contractions.rs  fillers.rs  mod.rs  punctuation.rs  tests.rs
src-tauri/src/transcribe/: groq.rs  local.rs  mod.rs  openai.rs
src/components/: ApiKeyInput.tsx  HotkeyBinder.tsx  Logo.tsx  PermissionRow.tsx  PolishProviderHelp.tsx  ToastStack.tsx
src/hooks/: useSettings.ts
src/lib/: format.ts  ipc.ts  polishLabels.ts
src/routes/: About.tsx  Dictionary.tsx  History.tsx  Onboarding.tsx  RecordingOverlay.tsx  Settings.tsx
src/styles/: index.css
swift/: dicto-apple-polish.swift
